--- a/signup-page/src/index.css
+++ b/signup-page/src/index.css
@@ -12,15 +12,26 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+main{
+  height: 100vh; /* Full viewport height */
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
 
 /* Main Container */
-main {
+.mainsnippet {
+
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 240px;
   flex-wrap: wrap;
+
+  height: 100vh; /* Full viewport height */
+  /* background: #f8f9fa; Light background */
 }
 
 /* Centering the Main Content */
